<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/divider"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <TextView
            android:text="@string/logo"
            android:textSize="72sp"
            android:textColor="@color/primary_dark"
            android:textStyle="italic|bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal" />



        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/name"
            android:ems="10"
            android:textColor="@color/primary_text"
            android:textSize="20sp"
            android:maxLength="20"
            android:id="@+id/id_register_user_name"
            android:layout_marginTop="10dp" />

        <!-- Password Label -->

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/lname"
            android:ems="10"
            android:textColor="@color/primary_text"
            android:maxLength="20"
            android:textSize="20sp"
            android:id="@+id/id_register_last_user_name"
            android:layout_marginTop="20dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:textColor="@color/primary_text"
            android:textSize="20sp"
            android:maxLength="30"
            android:layout_marginTop="20dp"
            android:hint="@string/user_email"
            android:id="@+id/id_register_email"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="@color/primary_text"
            android:textSize="20sp"
            android:hint="@string/password"
            android:maxLength="20"
            android:id="@+id/id_register_user_password"
            android:layout_marginTop="20dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="@color/primary_text"
            android:textSize="20sp"
            android:hint="@string/confirm_password"
            android:id="@+id/id_register_user_confirm_password"
            android:maxLength="20"
            android:layout_marginTop="20dp"
            />

        <Button
            android:id="@+id/btn_register"
            android:background="@color/primary_dark"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:textColor="@color/primary_text"
            android:textSize="20sp"
            android:onClick="registerOnClick"
            android:padding="12dp"
            android:text="@string/register"/>



    </LinearLayout>
</ScrollView>
