<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/divider"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textStyle="italic"
            android:textColor="@color/primary_text"
            android:text="@string/about"
            android:layout_gravity="center_horizontal" />


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/primary_text"
                android:text="@string/application"
                android:layout_alignParentTop="true">

            </TextView>


            <TextView
                android:layout_marginLeft="100dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/secondary_text"
                android:text="@string/app_name"
                android:layout_alignParentTop="true"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version"
                android:textColor="@color/primary_text"
                android:textSize="20sp"
                android:id="@+id/textView3"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_marginLeft="100dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/secondary_text"
                android:text="@string/version_number"
                android:layout_alignParentTop="true"
                />

        </RelativeLayout>



        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp">


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/id_students_ok_button"
                android:text="@string/ok"
                android:textSize="20sp"
                android:textColor="@color/primary_text"
                style="?android:attr/borderlessButtonStyle"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="100dp"
                />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>