<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:padding="1dp"

    >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/card_view_team_management"
        card_view:cardCornerRadius="10dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            >

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/primary_text"
            android:maxLines="1"
            android:text="@string/name"
            android:id="@+id/id_member_name"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:id="@+id/id_member_last_name"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/primary_text"
            android:text="@string/lname"
            android:maxLines="1"
            android:layout_below="@+id/id_member_name"
            android:layout_marginTop="30dp" />




        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:id="@+id/id_member_email"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/primary_text"
            android:maxLines="1"
            android:text="@string/user_email"


            />


        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_member_pass"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/primary_text"
            android:maxLines="1"
            android:layout_alignParentRight="true"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/id_member_email"
            android:text="@string/password"

            />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>