<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:padding="1dp"

    >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/card_view_team_management"
        card_view:cardCornerRadius="10dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            >
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/primary_text"
                android:maxLines="1"
                android:id="@+id/id_user_list_fname"
                android:text="@string/name"
                />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textColor="@color/primary_text"
                android:maxLines="1"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/id_user_list_fname"
                android:id="@+id/id_user_list_lname"
                android:text="@string/lname" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textColor="@color/primary_text"
                android:maxLines="1"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/id_user_list_lname"
                android:id="@+id/id_user_list_phone"
                android:text="@string/phone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/id_user_list_phone"
                android:textSize="25sp"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:textColor="@color/primary_text"
                android:maxLines="1"
                android:id="@+id/id_user_list_email"
                android:text="@string/user_email"
                />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>