<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:paddingLeft="5dp"
        android:id="@+id/linear">

        <TextView android:id="@+id/id_waiting_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="1dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/total_task"
            android:textColor="@color/primary_text"
           />
        <TextView android:id="@+id/id_task_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="1dp"
            android:paddingLeft="5dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/time"
            android:textColor="#FF0000"
            />
    </LinearLayout>



    <android.support.v4.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/id_fragment_swipe"
        android:layout_below="@+id/linear"
        xmlns:android="http://schemas.android.com/apk/res/android">


    <include
        android:id="@+id/id_fragment_recycle_view"
        layout="@layout/recycle_view"
       />


    </android.support.v4.widget.SwipeRefreshLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/no_current_tasks"
        android:textColor="@color/primary_text"
        android:textSize="20sp"
        android:layout_centerInParent="true"
        android:id="@+id/id_waiting_empty_list"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>