<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/divider"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/refresh"
                android:textSize="20sp"
                android:textColor="@color/primary_text"
                android:layout_alignParentTop="true"
                android:id="@+id/id_select_time"
                />

            <Spinner
                android:id="@+id/id_refresh_spinner"
                android:layout_width="120dp"
                android:textSize="20sp"
                android:layout_marginLeft="100dp"
                android:textColor="@color/primary_text"
                android:layout_height="wrap_content">

            </Spinner>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/id_refresh_set_button"
                android:text="@string/save"
                android:textSize="20sp"
                android:textColor="@color/primary_text"
                style="?android:attr/borderlessButtonStyle"
                android:layout_alignParentRight="true"
                />

            <Button

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/id_refresh_cancel_button"
                android:text="@string/cancel"
                android:textSize="20sp"
                android:textColor="@color/primary_text"
                style="?android:attr/borderlessButtonStyle"
                android:layout_alignParentLeft="true"
                />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>